--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
-secret.tfvars
+*secret.tfvars
 **/.terraform.lock.hcl
 *.pub
 README-for-now.md
